refactor: Card, ScoreCalculator을 Cards 일급컬렉션으로 수정